--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps=
   marcoschwartz/LiquidCrystal_I2C@^1.1.4
   blynkkk/Blynk@^1.3.2
   sandeepmistry/LoRa@^0.8.0
+  knolleary/PubSubClient@^2.8
